# Fulcrum

./: .gitignore  DEPLOYMENT.md  INTEGRATION.md  INTENT_TRACKING.md  QUICK_TEST.md  README.md  TESTING.md  TESTING_GUIDE.md  design-system.md  index.html  setup-and-test.sh  test-system.sh
fulcrum-circuits/: .gitignore  README.md  package.json
fulcrum-circuits/circuits/: ed25519_core.circom  ed25519_verifier.circom
fulcrum-circuits/scripts/: compile.sh  generate_verifier.sh  test_circuit.sh  trusted_setup.sh
fulcrum-contracts/: Makefile  build.sh
fulcrum-contracts/contract/: Cargo.toml  rust-toolchain.toml
fulcrum-contracts/contract/src/: main.rs
fulcrum-evm/: .env.example  .gitignore  README.md  hardhat.config.js  package.json
fulcrum-evm/contracts/: FulcrumAvatar.sol  Groth16Verifier.sol
fulcrum-evm/scripts/: deploy.js
fulcrum-evm/test/: FulcrumAvatar.test.js
fulcrum-relayer/: .env.example  .gitignore  API.md  README.md  package-lock.json  package.json  start.sh  test-api.sh
fulcrum-relayer/src/: config.ts  index.ts  logger.ts
fulcrum-relayer/src/listeners/: casper-listener.ts
fulcrum-relayer/src/services/: relayer.ts
fulcrum-relayer/src/submitters/: eth-submitter.ts
fulcrum-relayer/src/zk/: proof-generator.ts
fulcrum-web/: .env.example  index.html  package.json  tailwind.config.ts
fulcrum-web/scripts/: debug_sdk.mjs  deploy.mjs  find_key.mjs  generate_pem.mjs
fulcrum-web/src/: App.tsx  index.css
fulcrum-web/src/components/: LoadingScreen.tsx
fulcrum-web/src/hooks/: useCasper.ts
fulcrum-web/src/lib/: casper.ts  debug-casper.ts  (+2 more)
(+32 files in other folders)
